welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:8: error: not found: type int
if (x==0){return 5:int}
                   ^indexOfMaxValue:8: error: type mismatch;
 found   : Unit
 required: Int
if (x==0){return 5:int}
^